force-app/main/default/objects/Lead/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description
  >Predicted segmentation tier for the lead (Strategic, Enterprise, Commercial, SMB, Partner Managed). Same Northstar_Customer_Segment GVS as Account.Customer_Segment__c so segment carries through on Lead conversion.</description>
    <inlineHelpText
  >Tier the lead is being qualified into. Drives SDR routing and the deal-desk threshold once converted.</inlineHelpText>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Customer_Segment</valueSetName>
    </valueSet>
</CustomField>