force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <description
  >Numeric lead score from the scoring model (0-9999). Higher = hotter. Stamped onto Task.Lead_Score_At_Creation__c at SDR-task creation so the score at-the-moment is preserved.</description>
    <inlineHelpText
  >Model-driven lead score. Routing uses thresholds; do not edit manually.</inlineHelpText>
    <label>Lead Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>