force-app/main/default/objects/Lead/fields/Qualification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Notes__c</fullName>
    <description
  >Long-form notes captured by the SDR during lead qualification (BANT/MEDDIC summary, pain points, current tools, next steps). Surfaces on Opportunity after conversion to give the AE the qualification context.</description>
    <inlineHelpText
  >SDR's qualification narrative. Carries through to the converted Opportunity.</inlineHelpText>
    <label>Qualification Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>