force-app/main/default/objects/Lead/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description
  >Northstar sales region for the lead. Same Northstar_Region GVS as Account.Region__c so region carries through on Lead conversion.</description>
    <inlineHelpText
  >Sales region used for SDR routing and pipeline reporting.</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Region</valueSetName>
    </valueSet>
</CustomField>