force-app/main/default/objects/Lead/fields/Requires_AI_Dispatch_Interest__c.field-meta.xml
<CustomField>
    <fullName>Requires_AI_Dispatch_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >True when the lead has expressed interest in the AI Dispatch add-on. Pre-qualifies the converted Opportunity for the AI Dispatch provisioning path (Provisioning_Requested__e on Order create).</description>
    <inlineHelpText
  >Check if the prospect asked about AI Dispatch. Carries through to Opportunity and shortens the implementation conversation.</inlineHelpText>
    <label>Requires AI Dispatch Interest</label>
    <type>Checkbox</type>
</CustomField>