force-app/main/default/objects/Lead/fields/Routing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Routing_Reason__c</fullName>
    <description
  >Free-text capture of why the lead was assigned to its current owner / SDR queue. Stamped by the lead-assignment routing logic in / 0026.</description>
    <inlineHelpText
  >Last routing decision explanation. Overwritten on every re-route — do not rely on manual edits.</inlineHelpText>
    <label>Routing Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>