force-app/main/default/objects/Lead/recordTypes/Event_Lead.recordType-meta.xml
<RecordType>
    <fullName>Event_Lead</fullName>
    <active>true</active>
    <businessProcess>Northstar_Lead_Process</businessProcess>
    <description
  >Leads captured at events / field activity. SDR follow-up under stricter SLA.</description>
    <label>Event Lead</label>
</RecordType>