force-app/main/default/objects/Lead/recordTypes/Inbound.recordType-meta.xml
<RecordType>
    <fullName>Inbound</fullName>
    <active>true</active>
    <businessProcess>Northstar_Lead_Process</businessProcess>
    <description
  >Self-service or marketing-sourced inbound leads. Routes through the Inbound SDR queue.</description>
    <label>Inbound</label>
</RecordType>