force-app/main/default/objects/Lead/recordTypes/Partner_Referral.recordType-meta.xml
<RecordType>
    <fullName>Partner_Referral</fullName>
    <active>true</active>
    <businessProcess>Northstar_Lead_Process</businessProcess>
    <description
  >Leads referred by a partner. Routes through the Partner Referral queue; carries Partner_Account__c.</description>
    <label>Partner Referral</label>
</RecordType>