force-app/main/default/objects/Lead/listViews/New_Inbound_Leads_This_Week.listView-meta.xml
<ListView>
    <fullName>New_Inbound_Leads_This_Week</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Source_Detail__c</columns>
    <columns>Customer_Segment__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Source_Detail__c</field>
        <operation>equals</operation>
        <value>Inbound Form,Inbound MQL,Trial Signup,Content Download,Webinar,Paid Search</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>LEAD.CONVERTED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>New Inbound Leads This Week</label>
</ListView>